# SimpleCalculator

./: CMakeLists.txt  README.md  calculator.cpp  equation.cpp  test.cpp
